// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchPath matches a path 1`] = `
<pre>
  {
  "location": {
    "pathname": "/groups/123",
    "search": "",
    "key": "initial"
  },
  "match": {
    "groupId": "123",
    "uri": "/groups/123",
    "path": "/groups/:groupId"
  }
}
</pre>
`;

exports[`ServerRenderContext works 1`] = `"<div data-reactroot=\\"\\">Home</div>"`;

exports[`ServerRenderContext works 2`] = `"<div data-reactroot=\\"\\">Group: <!-- -->123</div>"`;

exports[`disrespect has complete disrespect for leading and trailing slashes 1`] = `
<div>
  Dash 
  <div>
    Reports 
    <div>
      Annual Report
    </div>
  </div>
</div>
`;

exports[`links renders links with relative hrefs 1`] = `
<div>
  <h1>
    Parent
  </h1>
  <a
    href="/dash/reports"
    onClick={[Function]}
  >
    /dash/reports
  </a>
  <div>
    <h2>
      Child
    </h2>
    <a
      href="/dash"
      onClick={[Function]}
    >
      /dash
    </a>
  </div>
</div>
`;

exports[`links uses the right href in multiple root paths 1`] = `
<div>
  <div>
    Parent URI: 
    /
  </div>
  <div>
    <div>
      Parent URI: 
      /
    </div>
    <div>
      <div>
        Parent URI: 
        /one
      </div>
      <div>
        <div>
          Child URI: 
          /one/two
        </div>
        <a
          href="/one/two/three"
          onClick={[Function]}
        >
          /one/two/three
        </a>
        <a
          href="/one"
          onClick={[Function]}
        >
          /one
        </a>
        <a
          href="/"
          onClick={[Function]}
        >
          /
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`nested rendering matches multiple nested / down to a child with a path 1`] = `
<div>
  Dash 
  <div>
    Dash 
    <div>
      Dash 
    </div>
  </div>
</div>
`;

exports[`nested rendering renders a child 'index' nested path 1`] = `
<div>
  Dash 
  <div>
    Reports 
  </div>
</div>
`;

exports[`nested rendering renders a nested path 1`] = `
<div>
  Dash 
  <div>
    Reports 
  </div>
</div>
`;

exports[`nested rendering renders a really nested path 1`] = `
<div>
  Dash 
  <div>
    Reports 
    <div>
      Annual Report
    </div>
  </div>
</div>
`;

exports[`nested rendering renders at a path with nested paths 1`] = `
<div>
  Dash 
</div>
`;

exports[`nested rendering yo dawg 1`] = `
<div>
  Dash 
  <div>
    Dash 
    <div>
      Dash 
    </div>
  </div>
</div>
`;

exports[`nested rendering yo dawg again 1`] = `
<div>
  Dash 
  <div>
    Dash 
    <div>
      Dash 
    </div>
  </div>
</div>
`;

exports[`nested routers allows arbitrary Router nesting through context 1`] = `
<div>
  Home
  <div>
    Chat Home
  </div>
</div>
`;

exports[`passed props parses dynamic segments and passes to components 1`] = `
<div>
  Group: 
  123
</div>
`;

exports[`passed props parses multiple params when nested 1`] = `
<div>
  123
  <div>
    123
     - 
    456
  </div>
</div>
`;

exports[`passed props passes the matched URI to the component 1`] = `
<pre>
  {
  "path": "/groups/:groupId/users/:userId",
  "groupId": "123",
  "userId": "456",
  "uri": "/groups/123/users/456",
  "location": {
    "pathname": "/groups/123/users/456",
    "search": "",
    "key": "initial"
  }
}
</pre>
`;

exports[`passed props shadows params in nested paths 1`] = `
<div>
  Group: 
  burger
  <div>
    Group: 
    milkshake
  </div>
</div>
`;

exports[`relative navigate prop navigates relative 1`] = `
<div>
  User:
  123
</div>
`;

exports[`relative navigate prop navigates relative 2`] = `
<div>
  User:
  123
  <div>
    Settings
  </div>
</div>
`;

exports[`route ranking / 1`] = `
<div>
  Root
</div>
`;

exports[`route ranking /groups 1`] = `
<div>
  Groups
</div>
`;

exports[`route ranking /groups/123 1`] = `
<div>
  Group Id: 
  123
</div>
`;

exports[`route ranking /groups/123/users 1`] = `
<div>
  Users
</div>
`;

exports[`route ranking /groups/123/users/456 1`] = `
<div>
  User id: 
  456
  , Group Id: 
  123
</div>
`;

exports[`route ranking /groups/123/users/a/bunch/of/junk 1`] = `
<div>
  Users Splat: 
</div>
`;

exports[`route ranking /groups/123/users/me 1`] = `
<div>
  Me!
</div>
`;

exports[`route ranking /groups/mine 1`] = `
<div>
  MyGroup
</div>
`;

exports[`route ranking /groups/mine/users 1`] = `
<div>
  MyGroupUsers
</div>
`;

exports[`route ranking /groups/mine/users/me 1`] = `
<div>
  Mine and Me!
</div>
`;

exports[`route ranking /one/two/three/four/five 1`] = `
<div>
  Fiver 
  one
   
  two
   
  three
   
  four
   
  five
</div>
`;

exports[`smoke tests renders at a path 1`] = `
<div>
  Dash 
</div>
`;

exports[`smoke tests renders the root component at "/" 1`] = `
<div>
  Home
</div>
`;

exports[`transitions keeps the stack right on interrupted transitions 1`] = `
<div>
  Annual Report
</div>
`;

exports[`transitions transitions pages 1`] = `
<div>
  Home
</div>
`;

exports[`transitions transitions pages 2`] = `
<div>
  Reports 
</div>
`;
